# github-test

./: CMakeLists.txt  README.md
.github/workflows/: ci-build.yml
src/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  tests.c
